--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,3 +4,9 @@ S3method(print,fastlm)
 S3method(print,summary.fastlm)
 S3method(summary,fastlm)
 export(fast_lm)
+
+importFrom(stats, model.frame)
+importFrom(stats, model.response)
+importFrom(stats, model.matrix)
+importFrom(stats, printCoefmat)
+importFrom(stats, pt)
